[default-layout] Fix link icon alignment in global presence menu

--- a/packages/@sanity/default-layout/src/navbar/presenceMenu/PresenceMenu.css
+++ b/packages/@sanity/default-layout/src/navbar/presenceMenu/PresenceMenu.css
@@ -6,7 +6,7 @@
 }
 
 .popoverContent {
-  max-width: 244px;
+  max-width: 280px;
 }
 
 .header {
